--- a/greeting.html
+++ b/greeting.html
@@ -112,7 +112,7 @@ for(let i=0;i<100;i++){
   });
 }
 
-function backToHome(){ window.location.href="birthday.html"; }
+function backToHome(){ window.location.href=""; }
 </script>
 
 </body>
