--- a/greeting.html
+++ b/greeting.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Birthday Letter 🎁</title>
+<title>Letter 🎁</title>
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -89,7 +89,7 @@ button:hover{
   <h1>Dear Naina ! 🎉✨</h1>
   <p>Today is all about you, and I hope it’s filled with laughter, surprises, and endless joy.</p>
   <p>May this year bring you closer to your dreams, and may you always stay the beautiful, kind, and fun soul 💕 you are.</p>
-  <p>Thanks for being my partner, and my endless laughter! 😉</p>
+  <p>Thanks for being a bearer, and endless laughter! 😉</p>
   <p>Wishing you a day as fabulous as you are! 🥳🎉</p>
   <p>Once again happy birthday my dear 🎂</p>
  
