--- a/next.html
+++ b/next.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Magical Celebration 💖</title>
+<title>Celebration</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 <meta name="mobile-web-app-capable" content="yes">
@@ -132,9 +132,9 @@ button{
 
 <div class="center">
  <h1>✨ Time to Celebrate ✨</h1>
- <p>The wait is over… this moment is for you 💖</p>
+ <p>The wait is over… this moment is for you </p>
  <button onclick="goToCake()">🎁 Tap for the Surprise</button>
- <p>Enjoy every second ✨</p>
+ <p>Enjoy every second 🐣</p>
 </div>
 
 <audio id="music" autoplay loop>
